Fix overflow issues on long chat messages

--- a/code/UI/TextChat/TextChat.scss
+++ b/code/UI/TextChat/TextChat.scss
@@ -52,7 +52,7 @@ TextChatEntry {
   color: white;
   transition: all 0.1s ease-out;
   box-shadow: 0 3px 10px rgba(#000, 0.5);
-  padding: 4px 16px 4px 4px;
+  padding: 5px 10px;
   min-height: 32px;
   max-width: 100%;
   transform: scale(1);
@@ -88,7 +88,6 @@ TextChatEntry {
     text-shadow: 0 2 0 $dark-blue;
     text-stroke: 2px $dark-blue;
     font-size: 16px;
-    padding: 2px 0;
     flex-shrink: 0;
   }
 
@@ -97,7 +96,6 @@ TextChatEntry {
     text-shadow: 0 2 0 $dark-blue;
     text-stroke: 2px $dark-blue;
     font-size: 16px;
-    padding: 2px 0;
     flex-grow: 1;
   }
 }
